# Fiscal_takehome

./: .env.example  .gitignore  README.md  pyproject.toml  reset.sh
fiscal/: __init__.py  cli.py  ir_scraper.py  llm_pdf_builder.py  server.py
fiscal/extraction/: __init__.py  statement_detector.py
fiscal/llm/: __init__.py  client.py  company_field_discovery.py  field_value_extractor.py
fiscal/scripts/: run_company_field_discovery_from_pdfs.py  run_field_extraction.py
tests/: conftest.py  test_classifier.py  test_db.py  test_discovery.py  test_download.py  test_extraction_pipeline.py  test_statement_detector.py
