[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiscal"
version = "0.1.0"
requires-python = ">=3.11"
description = "European public company financial data pipeline"
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pdfplumber>=0.11",
    "rich>=13.7",
    "pandas>=2.1",
    "flask>=3.0",
    "reportlab>=4.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[project.scripts]
fiscal = "fiscal.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fiscal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
